# libtooling_step_by_step

./: CMakeLists.txt  Readme.md  print_function_decls.cpp  print_local_function_decls.cpp  replace_for_pattern.cpp  simple_print_ast.cpp  trivial_function_name_rewriter.cpp
inputs/: CMakeLists.txt  Turtle.cpp  crossed_ifs.cpp  macro_city.cpp  print_int.cpp  square_int.cpp
